align code with tutorial
